--- a/docs/changelog/wearables/providers.mdx
+++ b/docs/changelog/wearables/providers.mdx
@@ -2,7 +2,34 @@
 title: "Providers"
 ---
 
-### Expanded Source Type attribution
+
+### Freestyle Libre: India region (Apr 24)
+Our Freestyle Libre integration now supports the LibreView India region.
+
+<Accordion icon="tag" iconType="duotone" title="Details">
+Check out the [Freestyle Libre](/wearables/guides/freestyle#custom-practice-enterprise-only) documentation for more information.
+</Accordion>
+
+
+### Health Connect Background Sync (Mar 24)
+Vital Mobile SDK now includes an experimental Background Sync feature for Android Health Connect.
+
+<Accordion icon="robot" iconType="duotone" title="Details">
+The feature is available through the following Vital Mobile SDK releases:
+| Platform       | Version |
+| -------------- | ------- |
+| Native Android | 2.0.0+  |
+| Flutter        | 3.2.0+  |
+| React Native   | 3.1.0+  |
+
+Check out the following documentation for information, integration guidance as well as caveats
+of the experimental Background Sync :
+* [Vital Health SDK: Automatic Data Sync](/wearables/sdks/vital-health#automatic-data-sync) for a general overview
+* [Android Health Connect integration guide](/wearables/guides/android-health-connect:), which includes guidance on the experimental Background Sync feature.
+</Accordion>
+
+
+### Expanded Source Type attribution (Feb 24)
 Data from Fitbit, Oura, Garmin and Freestyle Libre now comes with Source Type attributions.
 
 <Accordion icon="tag" iconType="duotone" title="Details">
