--- a/docs/webhooks/event-structure.mdx
+++ b/docs/webhooks/event-structure.mdx
@@ -6,6 +6,10 @@ All our webhook events have the following standard structure:
 
 * A top-level `event_type` field, specifying the payload type contained in the `data` field.
 * A top-level `data` field containing the event-specific payload.
+* A set of top-level fields describing the event subject:
+  * `team_id`: Your Vital Team ID.
+  * `user_id` and `client_user_id`: The unique Vital User ID.
+  * `client_user_id`: Your application user reference you declared for [the Vital User](/api-reference/user/create-user).
 
 Schemas and examples are available through [the Event Catalog tab in the Webhooks section of our Web app](https://app.tryvital.io).
 
@@ -15,7 +19,10 @@ Schemas and examples are available through [the Event Catalog tab in the Webhook
   "data": {
     # ... event specific data
   },
-  "event_type": "daily.data.glucose.created"
+  "event_type": "daily.data.glucose.created",
+  "user_id": "4a29dbc7-6db3-4c83-bfac-70a20a4be1b2",
+  "client_user_id": "01HW3FSNVCHC3B2QB5N0ZAAAVG",
+  "team_id": "6b74423d-0504-4470-9afb-477252ccf67a"
 }
 ```
 ```json Example: Provider connection created
@@ -28,7 +35,10 @@ Schemas and examples are available through [the Event Catalog tab in the Webhook
     },
     "user_id": "4a29dbc7-6db3-4c83-bfac-70a20a4be1b2"
   },
-  "event_type": "provider.connection.created"
+  "event_type": "provider.connection.created",
+  "user_id": "4a29dbc7-6db3-4c83-bfac-70a20a4be1b2",
+  "client_user_id": "01HW3FSNVCHC3B2QB5N0ZAAAVG",
+  "team_id": "6b74423d-0504-4470-9afb-477252ccf67a"
 }
 ```
 </CodeGroup>
@@ -60,7 +70,10 @@ Wearable data events have the following extended standard structure:
     },
     "user_id": "4a29dbc7-6db3-4c83-bfac-70a20a4be1b2"
   },
-  "event_type": "daily.data.glucose.created"
+  "event_type": "daily.data.glucose.created",
+  "user_id": "4a29dbc7-6db3-4c83-bfac-70a20a4be1b2",
+  "client_user_id": "01HW3FSNVCHC3B2QB5N0ZAAAVG",
+  "team_id": "6b74423d-0504-4470-9afb-477252ccf67a"
 }
 ```
 
@@ -85,7 +98,10 @@ The object is made available directly at the top-level `data` field (JSON path: 
     },
     "user_id": "4a29dbc7-6db3-4c83-bfac-70a20a4be1b2"
   },
-  "event_type": "daily.data.activity.created"
+  "event_type": "daily.data.activity.created",
+  "user_id": "4a29dbc7-6db3-4c83-bfac-70a20a4be1b2",
+  "client_user_id": "01HW3FSNVCHC3B2QB5N0ZAAAVG",
+  "team_id": "6b74423d-0504-4470-9afb-477252ccf67a"
 }
 ```
 
@@ -114,7 +130,10 @@ The object is made available directly at the top-level `data` field (JSON path: 
     },
     "user_id": "4a29dbc7-6db3-4c83-bfac-70a20a4be1b2"
   },
-  "event_type": "daily.data.activity.updated"
+  "event_type": "daily.data.activity.updated",
+  "user_id": "4a29dbc7-6db3-4c83-bfac-70a20a4be1b2",
+  "client_user_id": "01HW3FSNVCHC3B2QB5N0ZAAAVG",
+  "team_id": "6b74423d-0504-4470-9afb-477252ccf67a"
 }
 ```
 </CodeGroup>
@@ -162,7 +181,10 @@ and some may even send updates ASAP on time buckets that have incomplete data. F
     },
     "user_id": "4a29dbc7-6db3-4c83-bfac-70a20a4be1b2"
   },
-  "event_type": "daily.data.steps.created"
+  "event_type": "daily.data.steps.created",
+  "user_id": "4a29dbc7-6db3-4c83-bfac-70a20a4be1b2",
+  "client_user_id": "01HW3FSNVCHC3B2QB5N0ZAAAVG",
+  "team_id": "6b74423d-0504-4470-9afb-477252ccf67a"
 }
 ```
 
@@ -208,7 +230,10 @@ and some may even send updates ASAP on time buckets that have incomplete data. F
     },
     "user_id": "4a29dbc7-6db3-4c83-bfac-70a20a4be1b2"
   },
-  "event_type": "daily.data.calories_active.created"
+  "event_type": "daily.data.calories_active.created",
+  "user_id": "4a29dbc7-6db3-4c83-bfac-70a20a4be1b2",
+  "client_user_id": "01HW3FSNVCHC3B2QB5N0ZAAAVG",
+  "team_id": "6b74423d-0504-4470-9afb-477252ccf67a"
 }
 ```
 </CodeGroup>
@@ -242,6 +267,9 @@ e.g., [the Workout Stream endpoint](/api-reference/workouts/get-stream) `GET /v2
     },
     "user_id": "bf6222fb-3b81-4201-9630-118bfee01e03",
   },
-  "event_type": "daily.data.workout_stream.created"
+  "event_type": "daily.data.workout_stream.created",
+  "user_id": "4a29dbc7-6db3-4c83-bfac-70a20a4be1b2",
+  "client_user_id": "01HW3FSNVCHC3B2QB5N0ZAAAVG",
+  "team_id": "6b74423d-0504-4470-9afb-477252ccf67a"
 }
 ```
