--- a/docs/wearables/guides/freestyle.mdx
+++ b/docs/wearables/guides/freestyle.mdx
@@ -40,6 +40,7 @@ Freestyle Libre is available in different regions, ensure you invite the correct
 | ---------------------------------------------- | 
 | United States (`us`) \*                        | 
 | Canada (`ca`)                                  | 
+| India (`in`)                                  | 
 | _(\*) Default Freestyle region if unspecified_ |
 
 **Vital EU Region**
