--- a/docs/changelog/wearables/providers.mdx
+++ b/docs/changelog/wearables/providers.mdx
@@ -6,7 +6,7 @@ title: "Providers"
 ### Freestyle Libre: India region (Apr 24)
 Our Freestyle Libre integration now supports the LibreView India region.
 
-<Accordion icon="tag" iconType="duotone" title="Details">
+<Accordion icon="tag" iconType="duotone" title="Details" defaultOpen>
 Check out the [Freestyle Libre](/wearables/guides/freestyle#custom-practice-enterprise-only) documentation for more information.
 </Accordion>
 
@@ -14,7 +14,7 @@ Check out the [Freestyle Libre](/wearables/guides/freestyle#custom-practice-ente
 ### Health Connect Background Sync (Mar 24)
 Vital Mobile SDK now includes an experimental Background Sync feature for Android Health Connect.
 
-<Accordion icon="robot" iconType="duotone" title="Details">
+<Accordion icon="robot" iconType="duotone" title="Details" defaultOpen>
 The feature is available through the following Vital Mobile SDK releases:
 | Platform       | Version |
 | -------------- | ------- |
@@ -32,6 +32,6 @@ of the experimental Background Sync :
 ### Expanded Source Type attribution (Feb 24)
 Data from Fitbit, Oura, Garmin and Freestyle Libre now comes with Source Type attributions.
 
-<Accordion icon="tag" iconType="duotone" title="Details">
+<Accordion icon="tag" iconType="duotone" title="Details" defaultOpen>
 Check out the [Data Attributions](/wearables/providers/data-attributions#source-type) documentation for more information.
 </Accordion>
