Add one missing monthstamp

--- a/docs/changelog/wearables/api.mdx
+++ b/docs/changelog/wearables/api.mdx
@@ -32,7 +32,7 @@ Check out the [Provider Connection Created](/event-catalog/provider.connection.c
 </Accordion>
 
 
-### Fallback Birth Date for Heart Rate Zones
+### Fallback Birth Date for Heart Rate Zones (Feb 24)
 You can now set a Fallback Birth Date on a user.
 
 <Accordion icon="cake-candles" iconType="duotone" title="Details" defaultOpen>
