Reword Team Brand Information changelog section title

--- a/docs/changelog/core/api.mdx
+++ b/docs/changelog/core/api.mdx
@@ -2,7 +2,7 @@
 title: "API"
 ---
 
-### Updating your Team Brand Information (Apr 24)
+### Manage Team Brand Information (Apr 24)
 You can now manage Brand Information of your Vital Teams through the Org Management API.
 
 <Accordion icon="billboard" iconType="duotone" title="Details" defaultOpen>
