Fix Health Connect BgSync link

--- a/docs/changelog/wearables/providers.mdx
+++ b/docs/changelog/wearables/providers.mdx
@@ -25,7 +25,7 @@ The feature is available through the following Vital Mobile SDK releases:
 Check out the following documentation for information, integration guidance as well as caveats
 of the experimental Background Sync :
 * [Vital Health SDK: Automatic Data Sync](/wearables/sdks/vital-health#automatic-data-sync) for a general overview
-* [Android Health Connect integration guide](/wearables/guides/android-health-connect:), which includes guidance on the experimental Background Sync feature.
+* [Android Health Connect integration guide](/wearables/guides/android-health-connect#background-sync-experimental), which includes guidance on the experimental Background Sync feature.
 </Accordion>
 
 
