Update vo2_max Python sample code

--- a/docs/api-reference/timeseries-grouped/vo2-max.mdx
+++ b/docs/api-reference/timeseries-grouped/vo2-max.mdx
@@ -31,7 +31,7 @@ client = Vital(
   environment=VitalEnvironment.SANDBOX
 )
 
-data = client.vitals.vo2_max_grouped(
+data = client.vitals.vo_2_max_grouped(
   user_id="<user_id>", 
   start_date="2021-10-01", 
   end_date="2021-10-02"
