review comments addressed

--- a/docs/api-reference/org-management/team-scope-requirements/get-team-scope-requirements.mdx
+++ b/docs/api-reference/org-management/team-scope-requirements/get-team-scope-requirements.mdx
@@ -1,6 +1,6 @@
 ---
 openapi: get /v1/org/{org_id}/team/{team_id}/scope_requirements
-title: Get Team ETL Pipelines
+title: Get Team Scope Requirements
 ---
 
 import OrgManagementAPI from '/snippets/org-management-api.mdx';
