--- a/docs/api-reference/org-management/team-scope-requirements/upsert-team-scope-requirements.mdx
+++ b/docs/api-reference/org-management/team-scope-requirements/upsert-team-scope-requirements.mdx
@@ -1,6 +1,6 @@
 ---
 openapi: post /v1/org/{org_id}/team/{team_id}/scope_requirements
-title: Set / Reset Team ETL Pipelines
+title: Set Team Scope Requirements
 ---
 
 import OrgManagementAPI from '/snippets/org-management-api.mdx';
