Add a note on the Link Error list being non-exhaustive

--- a/docs/wearables/connecting-providers/errors.mdx
+++ b/docs/wearables/connecting-providers/errors.mdx
@@ -55,6 +55,10 @@ Your application logic should not rely on this message.
 
 ## Error Types
 
+<Note>
+This list is **non-exhaustive**. Your application logic must gracefully handle any unrecognized error type.
+</Note>
+
 | Error Type                   | Description                                    |
 | ---------------------------- | ---------------------------------------------- |
 | `invalid_token`              | The Link Token is invalid or has expired.      |
